--- a/app/src/main/res/drawable/card_back_btn.xml
+++ b/app/src/main/res/drawable/card_back_btn.xml
@@ -6,7 +6,7 @@
 
         <shape android:shape="rectangle">
 
-            <solid android:color="#FFFFFF" />
+            <solid android:color="#F6F6F6" />
             <corners android:radius="10dp"/>
             <!-- <stroke android:width="1dp" android:color="#FFB777"/>-->
 
