--- a/app/src/main/res/layout/lunch_rv.xml
+++ b/app/src/main/res/layout/lunch_rv.xml
@@ -3,11 +3,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="160dp"
+    android:layout_height="wrap_content"
     android:background="@drawable/card_shape"
-    android:layout_marginTop="10dp"
-    android:layout_marginLeft="10dp"
-    android:layout_marginRight="10dp">
+    android:layout_margin="15dp"
+   >
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView"
@@ -39,6 +38,7 @@
         android:maxLength="40"
         android:textColor="@color/black"
         android:textSize="16sp"
+        android:fontFamily="@font/poppinssemibold"
 
         android:maxLines="2"
         android:text="Sample Text is here"
@@ -47,7 +47,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
-        android:id="@+id/imageView3"
+        android:id="@+id/forward"
         android:layout_width="60dp"
         android:layout_height="60dp"
         android:src="@drawable/card_btn"
