--- a/app/src/main/res/layout/activity_breakfast.xml
+++ b/app/src/main/res/layout/activity_breakfast.xml
@@ -5,10 +5,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#ffffff"
+
     tools:context=".breakfast">
 
+
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/breakfastimagev"
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_marginTop="20dp"
@@ -20,30 +22,34 @@
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/back_icon" />
 
+
     <TextView
         android:id="@+id/breakfastTitleTextv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="BreakFast"
+        android:text="Breakfast"
 
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView"
+        app:layout_constraintBottom_toBottomOf="@+id/breakfastimagev"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.11"
         android:textColor="@color/black"
-        android:textSize="22sp"
-        app:layout_constraintStart_toEndOf="@+id/imageView"
-        app:layout_constraintTop_toTopOf="@+id/imageView" />
+        android:textSize="24sp"
+        android:fontFamily="@font/popins"
+        app:layout_constraintStart_toEndOf="@+id/breakfastimagev"
+        app:layout_constraintTop_toTopOf="@+id/breakfastimagev" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginTop="8dp"
-
         android:id="@+id/recyclerbreakfast"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+
         tools:listitem="@layout/breakfast_rv"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView" />
+        app:layout_constraintTop_toBottomOf="@+id/breakfastimagev" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
