--- a/app/src/main/res/layout/activity_lunch.xml
+++ b/app/src/main/res/layout/activity_lunch.xml
@@ -5,8 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#ffffff"
-
-    tools:context=".breakfast">
+    tools:context=".lunch">
 
 
     <ImageView
@@ -47,6 +46,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
 
+        tools:listitem="@layout/lunch_rv"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/lunchimagev" />
 
