--- a/app/src/main/res/layout/breakfast_rv.xml
+++ b/app/src/main/res/layout/breakfast_rv.xml
@@ -1,118 +1,61 @@
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?>
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="10dp"
-    android:layout_marginTop="10dp"
-    android:layout_marginRight="10dp"
-    android:layout_marginLeft="10dp"
-    android:background="#ffffff">
+    android:background="@drawable/card_shape"
+    android:layout_margin="15dp"
+    >
 
     <androidx.cardview.widget.CardView
-        android:id="@+id/cardView"
-        android:layout_width="95dp"
-        android:layout_height="95dp"
-        android:layout_marginStart="0dp"
-        app:cardCornerRadius="200dp"
-        android:layout_marginTop="12dp"
-        app:cardElevation="10dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true">
+        android:id="@+id/breakfastcardView"
+        android:layout_width="85dp"
+        android:layout_height="85dp"
+        android:layout_marginStart="3dp"
+        app:cardCornerRadius="50dp"
+        app:cardElevation="14dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
             android:id="@+id/breakfastimg"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_gravity="center"
-            android:scaleType="fitXY"
+            android:scaleType="centerCrop"
             android:src="@drawable/pizza_sample" />
     </androidx.cardview.widget.CardView>
 
     <TextView
         android:id="@+id/breakfasttitle"
-        android:layout_width="120dp"
-        android:layout_height="110dp"
-        android:layout_marginStart="6dp"
-        android:layout_marginTop="5dp"
-
-        android:layout_toEndOf="@+id/cardView"
-        android:ellipsize="end"
-        android:layout_toRightOf="@+id/cardView"
-        android:maxLength="30"
-        android:maxLines="3"
-        android:text="Oats"
+        android:layout_width="135dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="-20dp"
+        android:textStyle="bold"
+        android:maxLength="40"
         android:textColor="@color/black"
         android:textSize="16sp"
-        android:textStyle="bold" />
+        android:fontFamily="@font/poppinssemibold"
 
-    <TextView
-        android:id="@+id/Calories"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:maxLines="2"
+        android:text="Sample Text is here"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/breakfastcardView"
+        app:layout_constraintTop_toTopOf="parent" />
 
-android:layout_toEndOf="@id/breakfasttitle"
-        android:layout_marginLeft="12dp"
-        android:layout_marginTop="0dp"
-        android:layout_toRightOf="@+id/breakfasttitle"
-        android:ellipsize="end"
-        android:maxLines="1"
-        android:text="Calories:100g"
-        android:textColor="@android:color/black"
-        android:textSize="16sp"
-        android:textStyle="italic" />
+    <ImageView
+        android:id="@+id/breakfastforward"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:src="@drawable/card_btn"
+        android:layout_marginEnd="5dp"
+        android:padding="5dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:tint="#019267" />
 
-    <TextView
-        android:id="@+id/Protien"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/Calories"
-        android:layout_marginStart="13dp"
-        android:layout_marginLeft="13dp"
-        android:layout_marginTop="0dp"
-        android:layout_toEndOf="@+id/breakfasttitle"
-        android:layout_toRightOf="@+id/breakfasttitle"
-        android:ellipsize="end"
-        android:maxLines="1"
-        android:text="Protien:10g"
-        android:textColor="@android:color/black"
-        android:textSize="16sp"
-        android:textStyle="italic" />
-
-    <TextView
-        android:id="@+id/Carbs"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/Protien"
-        android:layout_marginStart="13dp"
-
-        android:layout_marginLeft="13dp"
-        android:layout_marginTop="0dp"
-        android:layout_toEndOf="@+id/breakfasttitle"
-        android:layout_toRightOf="@+id/breakfasttitle"
-
-        android:ellipsize="end"
-        android:maxLines="1"
-        android:text="Carbs:60g"
-        android:textColor="@android:color/black"
-        android:textSize="16sp"
-        android:textStyle="italic" />
-
-    <TextView
-        android:id="@+id/Fat"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/Carbs"
-        android:layout_marginStart="13dp"
-        android:layout_marginLeft="13dp"
-        android:layout_marginTop="0dp"
-        android:layout_toEndOf="@+id/breakfasttitle"
-        android:layout_toRightOf="@+id/breakfasttitle"
-        android:ellipsize="end"
-        android:maxLines="1"
-        android:text="Fat:40g"
-        android:textColor="@android:color/black"
-        android:textSize="16sp"
-        android:textStyle="italic" />
-</RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
