--- a/app/src/main/res/layout/activity_lunchdetail.xml
+++ b/app/src/main/res/layout/activity_lunchdetail.xml
@@ -91,15 +91,17 @@
             android:id="@+id/lunchnutrients"
             android:layout_width="150dp"
             android:layout_height="42dp"
-            android:layout_alignParentStart="true"
             android:layout_below="@id/lunch_title"
-            android:layout_marginTop="40dp"
+            android:layout_alignParentStart="true"
             android:layout_marginStart="34dp"
+            android:layout_marginTop="40dp"
+            android:layout_marginEnd="43dp"
+            android:layout_toStartOf="@+id/lunchiteminfo"
             android:background="@drawable/btn_ing"
-            android:paddingLeft="20sp"
-            android:paddingRight="20sp"
             android:fontFamily="@font/poppinssemibold"
 
+            android:paddingLeft="20sp"
+            android:paddingRight="20sp"
             android:text="Nutrients" />
 
         <ScrollView
