--- a/app/src/main/res/layout/item_diet_plan.xml
+++ b/app/src/main/res/layout/item_diet_plan.xml
@@ -11,14 +11,14 @@
 
     <TextView
         android:id="@+id/textViewCategory"
-        android:layout_width="180dp"
-        android:layout_height="60dp"
-        android:layout_marginTop="60dp"
+        android:layout_width="wrap_content"
+        android:layout_height="50dp"
+        android:layout_marginTop="40dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="14dp"
         android:ellipsize="end"
         android:maxLines="1"
-
-
-        android:text="Breakfast"
+        android:text="Pre-Workout"
         android:textColor="@android:color/black"
         android:textSize="30sp"
         android:textStyle="bold" />
@@ -26,25 +26,22 @@
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView"
         android:layout_width="109dp"
-        android:layout_height="109dp"
-        android:layout_marginStart="60dp"
-        android:layout_marginLeft="250dp"
+        android:layout_height="108dp"
+        android:layout_alignParentEnd="true"
+        android:layout_marginLeft="90dp"
+
+        android:layout_marginTop="10dp"
 
 
-        android:layout_marginTop="30dp"
-        android:layout_toEndOf="@+id/textViewCategory"
         app:cardCornerRadius="90dp"
         app:cardElevation="10dp">
 
         <ImageView
             android:id="@+id/imageViewCategory"
-            android:layout_width="100dp"
-            android:layout_height="110dp"
-
-
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:scaleType="centerCrop"
             android:src="@drawable/breakfast" />
     </androidx.cardview.widget.CardView>
-
 
 </RelativeLayout>
