--- a/app/src/main/res/layout/activity_postworkout.xml
+++ b/app/src/main/res/layout/activity_postworkout.xml
@@ -26,7 +26,7 @@
         android:id="@+id/postworkoutTitleTextv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Preworkout"
+        android:text="Postworkout"
 
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/postworkoutimagev"
