--- a/app/src/main/res/layout/activity_uwbreakfast.xml
+++ b/app/src/main/res/layout/activity_uwbreakfast.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="#ffffff"
 
-    tools:context=".UWbreakfast">
+    tools:context=".UnderweightBreakfast.UWbreakfast">
 
 
     <ImageView
