--- a/app/src/main/res/layout/activity_uwlunchdetail.xml
+++ b/app/src/main/res/layout/activity_uwlunchdetail.xml
@@ -4,33 +4,33 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".NormalBreakfast.breakfastdetail"
+    tools:context=".UnderweightLunch.UWlunchdetail"
     android:background="@color/white">
 
     <ImageView
-        android:id="@+id/breakfastitem_img"
+        android:id="@+id/UWlunchitem_img"
         android:layout_width="0dp"
         android:layout_height="250dp"
         android:background="#F6F6F6"
         android:hapticFeedbackEnabled="true"
         android:scaleType="centerCrop"
-        android:src="@drawable/breakfast"
+        android:src="@drawable/lunch"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
-        android:id="@+id/breakfastshadow"
+        android:id="@+id/UWlunchshadow"
         android:layout_width="0dp"
         android:layout_height="100dp"
-        app:layout_constraintBottom_toBottomOf="@+id/breakfastitem_img"
-        app:layout_constraintEnd_toEndOf="@+id/breakfastitem_img"
-        app:layout_constraintStart_toStartOf="@+id/breakfastitem_img"
+        app:layout_constraintBottom_toBottomOf="@+id/UWlunchitem_img"
+        app:layout_constraintEnd_toEndOf="@+id/UWlunchitem_img"
+        app:layout_constraintStart_toStartOf="@+id/UWlunchitem_img"
         app:srcCompat="@drawable/image_btm_overlay" />
 
     <ImageView
-        android:id="@+id/breakfastback_btn"
+        android:id="@+id/UWlunchback_btn"
         android:layout_width="45dp"
         android:layout_height="45dp"
         android:layout_marginStart="20dp"
@@ -42,7 +42,7 @@
         android:background="@drawable/card_back_btn"
         android:layout_marginTop="20dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/breakfastitem_img"
+        app:layout_constraintTop_toTopOf="@+id/UWlunchitem_img"
         app:srcCompat="@drawable/back_icon" />
 
     <!--    <ImageView
@@ -65,7 +65,7 @@
 
 
     <RelativeLayout
-        android:id="@+id/breakfastrelativeLayout"
+        android:id="@+id/UWlunchrelativeLayout"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="-10dp"
@@ -73,10 +73,10 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/breakfastitem_img">
+        app:layout_constraintTop_toBottomOf="@+id/UWlunchitem_img">
 
         <TextView
-            android:id="@+id/breakfast_title"
+            android:id="@+id/UWlunch_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
@@ -88,15 +88,15 @@
             android:textSize="20sp" />
 
         <Button
-            android:id="@+id/breakfastnutrients"
+            android:id="@+id/UWlunchnutrients"
             android:layout_width="150dp"
             android:layout_height="42dp"
-            android:layout_below="@id/breakfast_title"
+            android:layout_below="@id/UWlunch_title"
             android:layout_alignParentStart="true"
             android:layout_marginStart="34dp"
             android:layout_marginTop="40dp"
             android:layout_marginEnd="43dp"
-            android:layout_toStartOf="@+id/breakfastiteminfo"
+            android:layout_toStartOf="@+id/UWlunchiteminfo"
             android:background="@drawable/btn_ing"
             android:fontFamily="@font/poppinssemibold"
 
@@ -105,19 +105,20 @@
             android:text="Nutrients" />
 
         <ScrollView
-            android:id="@+id/breakfastnutrientsscrollv"
+            android:id="@+id/UWlunchnutrientsscrollv"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/breakfastnutrients"
+            android:layout_below="@id/UWlunchnutrients"
             android:layout_alignParentStart="true"
             android:padding="10dp">
 
             <TextView
-                android:id="@+id/breakfastnutrients_info"
+                android:id="@+id/UWlunchnutrients_info"
                 android:layout_gravity="center_horizontal"
                 android:lineSpacingExtra="10dp"
                 android:textColor="@color/black"
                 android:text=""
+                android:textStyle="bold"
                 android:textSize="15sp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"/>
@@ -125,11 +126,11 @@
         </ScrollView>
 
         <Button
-            android:id="@+id/breakfastiteminfo"
+            android:id="@+id/UWlunchiteminfo"
             android:layout_width="150dp"
             android:layout_height="42dp"
             android:layout_alignParentEnd="true"
-            android:layout_below="@id/breakfast_title"
+            android:layout_below="@id/UWlunch_title"
             android:layout_marginTop="40dp"
             android:layout_marginEnd="34dp"
             android:background="@drawable/btn_ing"
@@ -137,25 +138,25 @@
             android:paddingRight="20sp"
             android:fontFamily="@font/poppinssemibold"
 
-
             android:text="Item Info" />
 
         <ScrollView
-            android:id="@+id/breakfastiteminfoscrollv"
+            android:id="@+id/UWlunchiteminfoscrollv"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/breakfastiteminfo"
+            android:layout_below="@id/UWlunchiteminfo"
             android:layout_alignParentStart="true"
             android:padding="10dp"
-            android:visibility="gone">
+            android:visibility="visible">
 
             <TextView
-                android:id="@+id/breakfastitem_info"
+                android:id="@+id/UWlunchitem_info"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:lineSpacingExtra="10dp"
                 android:text=""
+                android:textStyle="bold"
                 android:textColor="@color/black"
                 android:textSize="15sp" />
 
@@ -164,25 +165,25 @@
     </RelativeLayout>
 
     <ImageView
-        android:id="@+id/breakfastupward"
+        android:id="@+id/UWlunchupward"
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="16dp"
         android:src="@drawable/scroll_up"
-        app:layout_constraintEnd_toEndOf="@+id/breakfastrelativeLayout"
-        app:layout_constraintTop_toTopOf="@+id/breakfastrelativeLayout" />
+        app:layout_constraintEnd_toEndOf="@+id/UWlunchrelativeLayout"
+        app:layout_constraintTop_toTopOf="@+id/UWlunchrelativeLayout" />
 
     <ImageView
-        android:id="@+id/breakfastdownward"
+        android:id="@+id/UWlunchdownward"
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="16dp"
         android:src="@drawable/back_icon"
         android:visibility="gone"
-        app:layout_constraintEnd_toEndOf="@+id/breakfastrelativeLayout"
-        app:layout_constraintTop_toTopOf="@+id/breakfastrelativeLayout" />
+        app:layout_constraintEnd_toEndOf="@+id/UWlunchrelativeLayout"
+        app:layout_constraintTop_toTopOf="@+id/UWlunchrelativeLayout" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
