--- a/app/src/main/res/layout/activity_bmi.xml
+++ b/app/src/main/res/layout/activity_bmi.xml
@@ -118,15 +118,15 @@
             android:layout_marginTop="15dp" />
 
         <TextView
+            android:id="@+id/currentweight"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/currentweight"
+            android:layout_centerInParent="true"
             android:text="55"
+            android:textAlignment="center"
             android:textColor="#FFFFFF"
             android:textSize="30sp"
-            android:textStyle="bold"
-            android:layout_centerInParent="true"
-            android:textAlignment="center" />
+            android:textStyle="bold" />
 
         <RelativeLayout
             android:layout_width="wrap_content"
@@ -319,12 +319,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
-            android:ellipsize="end"
-            android:maxLines="1"
-
-
             android:layout_centerInParent="true"
             android:layout_marginBottom="50dp"
+
+
+            android:ellipsize="end"
+            android:maxLines="1"
             android:text="170"
             android:textColor="#FFFFFF"
             android:textSize="40sp"
