--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -61,7 +61,7 @@
                     app:layout_constraintTop_toTopOf="parent">
 
                     <ImageView
-                        android:id="@+id/imageView3"
+                        android:id="@+id/backb"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="1dp"
@@ -73,7 +73,7 @@
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
                 <TextView
-                    android:id="@+id/textView3"
+                    android:id="@+id/username"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Aman Chaudhary"
@@ -94,23 +94,24 @@
 
 
 <TextView
-    android:id="@+id/textview4"
+    android:id="@+id/emailrs"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:textAlignment="center"
-    android:textColor="@color/black"
-    android:text="amanchaudhary3210@gmail.com"
+    android:textColor="#5B5B5B"
+    android:text="amanchaudhary321@gmail.com"
     />
 
             <ScrollView
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" >
+                android:layout_height="match_parent"
+                >
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginLeft="20dp"
-                android:layout_marginTop="20dp"
+                android:layout_marginTop="5dp"
                 android:layout_marginRight="20dp"
                 android:background="@drawable/white_background"
                 android:orientation="vertical">
@@ -214,6 +215,40 @@
                     android:layout_margin="5dp"
                     android:background="#D9D9D9" />
 
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="10dp"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/agetv"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text="AGE"
+                        android:textColor="#182693"
+                        android:textSize="18sp" />
+
+                    <TextView
+                        android:id="@+id/agers"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text="10"
+                        android:textAlignment="viewEnd"
+                        android:textColor="#5B5B5B"
+                        android:textSize="16sp" />
+
+                </LinearLayout>
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:layout_margin="5dp"
+                    android:background="#D9D9D9" />
+
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -244,7 +279,7 @@
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
-                    android:layout_margin="5dp"
+                    android:layout_margin="1dp"
                     android:background="#D9D9D9" />
 
                 <LinearLayout
@@ -261,13 +296,13 @@
                         android:text="Nutrients Info"
                         android:textAlignment="center"
                         android:textColor="#182693"
-                        android:textSize="20sp" />
+                        android:textSize="18sp" />
                 </LinearLayout>
 
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
-                    android:layout_margin="5dp"
+                    android:layout_margin="1dp"
                     android:background="#D9D9D9" />
 
                 <LinearLayout
@@ -283,7 +318,7 @@
                         android:layout_weight="1"
                         android:text="CALORIES"
                         android:textColor="#182693"
-                        android:textSize="16sp" />
+                        android:textSize="14sp" />
 
                     <TextView
                         android:id="@+id/caloriers"
@@ -300,7 +335,7 @@
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
-                    android:layout_margin="5dp"
+                    android:layout_margin="3dp"
                     android:background="#D9D9D9" />
 
                 <LinearLayout
@@ -316,7 +351,7 @@
                         android:layout_weight="1"
                         android:text="PROTIEN"
                         android:textColor="#182693"
-                        android:textSize="16sp" />
+                        android:textSize="14sp" />
 
                     <TextView
                         android:id="@+id/protienrs"
@@ -333,7 +368,7 @@
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
-                    android:layout_margin="5dp"
+                    android:layout_margin="3dp"
                     android:background="#D9D9D9" />
 
                 <LinearLayout
@@ -349,7 +384,7 @@
                         android:layout_weight="1"
                         android:text="CARBS"
                         android:textColor="#182693"
-                        android:textSize="16sp" />
+                        android:textSize="14sp" />
 
                     <TextView
                         android:id="@+id/carbsrs"
@@ -366,7 +401,7 @@
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
-                    android:layout_margin="5dp"
+                    android:layout_margin="3dp"
                     android:background="#D9D9D9" />
 
                 <LinearLayout
@@ -396,15 +431,12 @@
 
                 </LinearLayout>
 
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="1dp"
-                    android:layout_margin="5dp"
-                    android:background="#D9D9D9" />
+
 
 
 
             </LinearLayout>
+
             </ScrollView>
 
 
