--- a/app/src/main/res/layout/activity_breakfastdetail.xml
+++ b/app/src/main/res/layout/activity_breakfastdetail.xml
@@ -94,7 +94,7 @@
             android:layout_below="@id/breakfast_title"
             android:layout_alignParentStart="true"
             android:layout_marginStart="34dp"
-            android:layout_marginTop="40dp"
+            android:layout_marginTop="20dp"
             android:layout_marginEnd="43dp"
             android:layout_toStartOf="@+id/breakfastiteminfo"
             android:background="@drawable/btn_ing"
@@ -130,7 +130,7 @@
             android:layout_height="42dp"
             android:layout_alignParentEnd="true"
             android:layout_below="@id/breakfast_title"
-            android:layout_marginTop="40dp"
+            android:layout_marginTop="20dp"
             android:layout_marginEnd="34dp"
             android:background="@drawable/btn_ing"
             android:paddingLeft="20sp"
@@ -147,7 +147,7 @@
             android:layout_below="@id/breakfastiteminfo"
             android:layout_alignParentStart="true"
             android:padding="10dp"
-            android:visibility="gone">
+            android:visibility="visible">
 
             <TextView
                 android:id="@+id/breakfastitem_info"
@@ -156,6 +156,7 @@
                 android:layout_gravity="center_horizontal"
                 android:lineSpacingExtra="10dp"
                 android:text=""
+                android:textStyle="bold"
                 android:textColor="@color/black"
                 android:textSize="15sp" />
 
