--- a/app/src/main/res/layout/activity_postworkoutdetail.xml
+++ b/app/src/main/res/layout/activity_postworkoutdetail.xml
@@ -146,7 +146,7 @@
             android:layout_below="@id/postworkoutiteminfo"
             android:layout_alignParentStart="true"
             android:padding="10dp"
-            android:visibility="gone">
+            android:visibility="visible">
 
             <TextView
                 android:id="@+id/postworkoutitem_info"
